Code execution works (Thanks to Aaman :D)

--- a/django_project/blog/templates/blog/base.html
+++ b/django_project/blog/templates/blog/base.html
@@ -28,7 +28,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
+              <a class="nav-item nav-link" href="{% url 'blog-home' %}">Problems</a>
               <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
             </div>
             <!-- Navbar Right Side -->
@@ -50,7 +50,7 @@
       </nav>
     </header>
 
-    <main role="main" class="container-fluid">
+    <main role="main" class="container">
       <div class="row">
         <div class="container-fluid">
             {% if messages %}
