footer booter etc added

--- a/django_project/blog/static/blog/main.css
+++ b/django_project/blog/static/blog/main.css
@@ -40,6 +40,10 @@ ul {
   color: #444444;
 }
 
+.mainstuff{
+    min-height: 800px
+}
+
 a.article-title:hover {
   color: #428bca;
   text-decoration: none;
