--- a/django_project/blog/templates/blog/post_detail.html
+++ b/django_project/blog/templates/blog/post_detail.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html" %}
+{% extends "blog/code_view.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
 
@@ -52,11 +52,10 @@
                             </div>
 
                         </div>
-                        <div class="form-group row">
-                            <div class="col-sm-7 ml-3">
-                                <button class="btn btn-outline-success float-right" type="submit">Run Your Code</button>
+                            <div>
+                                <button class="btn btn-outline-warning float-left" type="submit">Submit Code For Test</button>
+                                <button class="btn btn-outline-success float-right" type="submit" action="/test/">Run Your Code</button>
                             </div>
-                        </div>
                     </form>
                 </div>
             </div>
