--- a/django_project/blog/static/blog/main.css
+++ b/django_project/blog/static/blog/main.css
@@ -28,6 +28,14 @@ ul {
   font-weight: 500;
 }
 
+.bg-pyimg {
+    background-image: url('/media/bg.jpg');
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .content-section {
   background: #ffffff;
   padding: 10px 20px;
