moved images to static

--- a/django_project/blog/static/blog/main.css
+++ b/django_project/blog/static/blog/main.css
@@ -29,7 +29,7 @@ ul {
 }
 
 .bg-pyimg {
-    background-image: url('/media/bg.jpg');
+    background-image: url('/static/bg.jpg');
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
