--- a/django_project/blog/templates/blog/welcome.html
+++ b/django_project/blog/templates/blog/welcome.html
@@ -17,7 +17,7 @@
 <main role="main" class="container-fluid">
     <div class="row mainstuff">
         <div class="col-sm-6">
-            <a href="{% url 'blog-home' %}"><img src="media/logo.png" class="img-fluid mx-auto d-block" alt="..."></a>
+            <a href="{% url 'blog-home' %}"><img src="{% static 'logo.png'%}" class="img-fluid mx-auto d-block" alt="..."></a>
         </div>
         <div class="container col-sm-4 row align-items-center">
             <div class="container">
