--- a/django_project/blog/templates/blog/code_view.html
+++ b/django_project/blog/templates/blog/code_view.html
@@ -31,6 +31,11 @@
               <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
               <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
             </div>
+            <div class="navbar-nav mr-auto">
+              <a class="navbar-brand" href="#">
+                <img src="{% static 'logo.png'%}" width="40" height="40" alt="">
+              </a>
+            </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
                 {% if user.is_authenticated %}
