--- a/django_project/blog/templates/blog/code_view.html
+++ b/django_project/blog/templates/blog/code_view.html
@@ -33,7 +33,7 @@
             </div>
             <div class="navbar-nav mr-auto">
               <a class="navbar-brand" href="#">
-                <img src="{% static 'logo.png'%}" width="40" height="40" alt="">
+                <a href="{% url 'blog-home' %}"><img src="{% static 'logo.png'%}" width="50" height="50" alt="Home"></a>
               </a>
             </div>
             <!-- Navbar Right Side -->
