--- a/django_project/blog/templates/blog/home.html
+++ b/django_project/blog/templates/blog/home.html
@@ -1,38 +1,91 @@
 {% extends "blog/base.html" %}
 {% block content %}
-    {% for post in posts %}
 
-        <article class="media content-section">
-            <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}" alt="">
-          <div class="media-body">
-            <div class="article-metadata">
-              <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
-              <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
-            </div>
-            <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-              <p>{{ post.content |slice:":255" }}</p>
-          </div>
-        </article>
-
-    {% endfor %}
+<div class="column">
 
     {% if is_paginated %}
-        {% if page_obj.has_previous %}
-            <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
-        {% endif %}
-
-        {% for num in page_obj.paginator.page_range %}
-            {% if page_obj.number == num %}
-                <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
-            {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-                <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
-            {% endif %}
-        {% endfor %}
-        {% if page_obj.has_next %}
-            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
-            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
-        {% endif %}
+    {% if page_obj.has_previous %}
+    <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
+    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
     {% endif %}
 
-{% endblock content %}
+    {% for num in page_obj.paginator.page_range %}
+    {% if page_obj.number == num %}
+    <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
+    {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+    <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
+    {% endif %}
+    {% endfor %}
+    {% if page_obj.has_next %}
+    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
+    <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+    {% endif %}
+    {% endif %}
+</div>
+
+<div class="d-flex justify-content-around">
+    {% if user.is_authenticated %}
+
+    <div class="flex-fill bd-highlight">
+        <article class="media content-section" style="height: 250px; width: 180px;">
+            <div class="mt-2 full-width align-items-center">
+                <img
+                        class="rounded-circle mr-3 img-fluid"
+                        style="width: 100%; height: 100%;"
+                        src="{{ user.profile.image.url }}">
+                <div>
+                    <h4 style="text-align: left">
+                        {{ user.username }}
+                    </h4>
+                    <p style="text-align: left">
+                        Problems solved: 0
+                    </p>
+                </div>
+            </div>
+        </article>
+    </div>
+
+    {% endif %}
+    <div class="pl-2 flex-fill bd-highlight">
+        {% for post in posts %}
+        <article class="media content-section">
+            <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}" alt="">
+            <div class="media-body">
+                <div class="article-metadata">
+                    <a class="mr-2" href="{% url 'user-posts' post.author.username %}">{{ post.author }}</a>
+                    <small class="text-muted">{{ post.date_posted|date:"F d, Y" }}</small>
+                </div>
+                <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
+                <p>{{ post.content |slice:":300" }}</p>
+            </div>
+        </article>
+        {% endfor %}
+    </div>
+    <div class="pl-2 flex-fill bd-highlight">
+        <article class="media content-section">
+            <h5>Leaderboard</h5>
+            {% if user_profile is None %}
+            <ul>
+                {% for userr in users %}
+                <li>
+                    <div>
+                        <div
+                                style="padding-left: 0px !important;"
+                                class="col-8 no-padding d-flex align-items-center">
+                            <img
+                                    class="rounded-circle mr-2"
+                                    style="width: 20px; height: 20px;"
+                                    src="{{ userr.profile.image.url }}">
+                            <a class="mr-2 white-important" href="{% url 'userr.username' %}">
+                                {{ userr.username }}
+                            </a>
+                        </div>
+                    </div>
+                </li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+        </article>
+    </div>
+    {% endblock content %}
+</div>
