--- a/django_project/blog/templates/blog/base.html
+++ b/django_project/blog/templates/blog/base.html
@@ -21,7 +21,7 @@
     <!-- Navigation bar -->
     <header class="site-header">
       <nav class="navbar navbar-expand-md bg-dark fixed-top">
-        <div class="container">
+        <div class="container-fluid">
           <a class="navbar-brand mr-4" href="/">{{ title }}</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -53,9 +53,9 @@
       </nav>
     </header>
 
-    <main role="main" class="container">
+    <main role="main" class="container-fluid">
       <div class="row mainstuff">
-        <div class="col-md-8">
+        <div class="col-md-12">
             {% if messages %}
                 {% for message in messages %}
                     <div class="alert alert-{{ message.tags }}">
