--- a/django_project/blog/templates/blog/home.html
+++ b/django_project/blog/templates/blog/home.html
@@ -1,7 +1,7 @@
 {% extends "blog/base.html" %}
 {% block content %}
 
-<div class="column">
+<div class="p-4 row">
 
     {% if is_paginated %}
     {% if page_obj.has_previous %}
@@ -23,11 +23,11 @@
     {% endif %}
 </div>
 
-<div class="d-flex justify-content-around">
+<div class="d-flex justify-content-center">
     {% if user.is_authenticated %}
 
-    <div class="flex-fill bd-highlight">
-        <article class="media content-section" style="height: 250px; width: 180px;">
+    <div class="pl-2">
+        <article class="content-section" style="height: 250px; width: 180px;">
             <div class="mt-2 full-width align-items-center">
                 <img
                         class="rounded-circle mr-3 img-fluid"
@@ -46,9 +46,9 @@
     </div>
 
     {% endif %}
-    <div class="pl-2 flex-fill bd-highlight">
+    <div class="pl-2 bd-highlight">
         {% for post in posts %}
-        <article class="media content-section">
+        <article class="content-section">
             <img class="rounded-circle article-img" src="{{ post.author.profile.image.url }}" alt="">
             <div class="media-body">
                 <div class="article-metadata">
@@ -61,30 +61,18 @@
         </article>
         {% endfor %}
     </div>
-    <div class="pl-2 flex-fill bd-highlight">
-        <article class="media content-section">
-            <h5>Leaderboard</h5>
-            {% if user_profile is None %}
-            <ul>
-                {% for userr in users %}
-                <li>
+    <div class="pl-2 bd-highlight">
+        <article class="content-section">
+            <h5>Problem Setters</h5>
+                {% for user in users %}
+
                     <div>
-                        <div
-                                style="padding-left: 0px !important;"
-                                class="col-8 no-padding d-flex align-items-center">
-                            <img
-                                    class="rounded-circle mr-2"
-                                    style="width: 20px; height: 20px;"
-                                    src="{{ userr.profile.image.url }}">
-                            <a class="mr-2 white-important" href="{% url 'userr.username' %}">
-                                {{ userr.username }}
-                            </a>
-                        </div>
+                        <a href="{% url 'user-posts' user.username %}">
+                                               {{ user.username }}
+                        </a>
                     </div>
-                </li>
+
                 {% endfor %}
-            </ul>
-            {% endif %}
         </article>
     </div>
     {% endblock content %}
