--- a/django_project/blog/templates/blog/post_detail.html
+++ b/django_project/blog/templates/blog/post_detail.html
@@ -54,7 +54,7 @@
                         </div>
                             <div>
                                 <button class="btn btn-outline-warning float-left" type="submit">Submit Code For Test</button>
-                                <button class="btn btn-outline-success float-right" type="submit" action="/test/">Run Your Code</button>
+                                <button class="btn btn-outline-success float-right" type="submit">Run Your Code</button>
                             </div>
                     </form>
                 </div>
