--- a/django_project/users/templates/users/login.html
+++ b/django_project/users/templates/users/login.html
@@ -1,23 +1,32 @@
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-    <div class="content-section">
-        <form method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Login</legend>
-                {{ form|crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Login</button>
-                <small class="text-muted ml-2">
-                    <a href="{% url 'password_reset' %}" class="ml-2">Forgot password?</a>
-                </small>
-            </div>
-        </form>
-        <div class="border-top pt-3">
-            <small class="text-muted">Need an account?</small>
-            <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
+<div class="content-section">
+    <form method="POST">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Login</legend>
+            {{ form|crispy }}
+        </fieldset>
+        <div class="form-group">
+            <button class="btn btn-outline-info" type="submit">Login</button>
+            <small class="text-muted ml-2">
+                <a href="{% url 'password_reset' %}" class="ml-2">Forgot password?</a>
+            </small>
         </div>
+    </form>
+    <div class="border-top pt-3 pb-3">
+        <small class="text-muted">Need an account?</small>
+        <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
     </div>
+    <div class="border-top pt-3">
+        <button class="btn">
+            <a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>
+        </button>
+         <button class="btn">
+            <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
+        </button>
+    </div>
+
+</div>
 {% endblock content %}
