--- a/django_project/blog/templates/blog/code_view.html
+++ b/django_project/blog/templates/blog/code_view.html
@@ -10,12 +10,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
+    <title>PythonShikhi -> {{ post.title }}</title>
 
-    {% if user.is_authenticated %}
-        <title>{{ title }}</title>
-    {% else %}
-        <title>Django Blog</title>
-    {% endif %}
 </head>
 <body>
     <!-- Navigation bar -->
@@ -29,7 +25,7 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
-              <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
+              <a class="nav-item nav-link" href="{% url 'blog-categories' %}">Categories</a>
             </div>
             <div class="navbar-nav mr-auto">
               <a class="navbar-brand" href="#">
